Resolve property loading bug affecting inherited fields during configuration initialization